<resources>
    <string name="app_name">Mapbox Demo</string>
    <string name="mapbox" translatable="false">Mapbox</string>
    <string name="examples">Android examples</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoiY2FtbWFjZSIsImEiOiJjaW9vbGtydnQwMDAwdmRrcWlpdDVoM3pjIn0.Oy_gHelWnV12kJxHQWV7XQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info_dialog_title">Getting started</string>
    <string name="info_dialog_description">Like the maps and examples? Learn how to include them in your app!</string>
    <string name="info_dialog_positive_button_text">Start Learning</string>
    <string name="info_dialog_negative_button_text">Not now</string>
    <string name="description_labs">While other categories in this app present examples doing one specific thing, the lab category combines examples to show the power of the SDK.</string>
    <string name="description_mas">Mapbox Android Services bundles many of the Mapbox APIs into a single SDK such as directions, geocoding, and many of the other utilities offered.</string>
    <string name="description_query">Examples here show how to query the map data to obtain information such as a features geometry or properties.</string>
    <string name="info">Info</string>
    <string name="getting_started_category">Getting started</string>
    <string name="styles_category">Styles</string>
    <string name="dds_category">Data driven styling</string>
    <string name="annotations_category">Annotations</string>
    <string name="camera_category">Camera</string>
    <string name="offline_category">Offline</string>
    <string name="query_map_category">Query map</string>
    <string name="android_services_category">Android Services</string>
    <string name="lab_category">Lab</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string-array name="layer_spinner_array">
        <item>Water</item>
        <item>Building</item>
    </string-array>
    <string name="activity_basic_simple_mapview_title">A simple map view</string>
    <string name="activity_basic_support_map_frag_title">Support map fragment</string>
    <string name="activity_basic_mapbox_options_title">Dynamically build a map view</string>
    <string name="activity_style_mapbox_studio_title">Mapbox Studio style</string>
    <string name="activity_style_default_title">Default styles</string>
    <string name="activity_styles_show_hide_layer_title">Show and hide layers</string>
    <string name="activity_styles_langauge_switch_title">"Change a map's language"</string>
    <string name="activity_styles_color_switcher_title">"Change a layer's color"</string>
    <string name="activity_styles_adjust_layer_opacity_title">"Adjust a layer's opacity"</string>
    <string name="activity_styles_geojson_layer_in_stack_title">Add a new layer below labels</string>
    <string name="activity_styles_vector_source_title">Add a vector tile source</string>
    <string name="activity_style_add_wms_source_title">Add a WMS source</string>
    <string name="activity_style_zoom_dependent_fill_color_title">Color dependent on zoom level</string>
    <string name="activity_style_create_heatmap_points_title">Create a heatmap from points</string>
    <string name="activity_style_data_clusters_title">Create and style data clusters</string>
    <string name="activity_style_line_layer_title">Create a line layer</string>
    <string name="activity_style_symbol_layer_title">Marker symbol layer</string>
    <string name="activity_style_local_style_or_raster_source_title">Local style or custom raster style</string>
    <string name="activity_extrusions_catalina_marathon_extrusions_title">Use GeoJSON data to set extrusion height</string>
    <string name="activity_extrusions_population_density_extrusions_title">Display 3D building height based on vector data</string>
    <string name="activity_extrusions_adjust_extrusions_title">Adjust light location and color</string>
    <string name="activity_extrusions_rotate_extrusions_title">Rotate and tilt with 3D buildings</string>
    <string name="activity_extrusions_indoor_3d_title">Extrude polygons for 3D indoor mapping</string>
    <string name="activity_dds_style_circle_categorically_title">Style circles categorically</string>
    <string name="activity_dds_choropleth_zoom_change_title">Update a choropleth layer by zoom level</string>
    <string name="activity_dds_json_vector_mix_title">Join local JSON data with vector tile geometries</string>
    <string name="activity_dds_style_line_identity_property_title">Style lines using an identity property function</string>
    <string name="activity_dds_time_lapse_rainfall_points_title">Data time lapse</string>
    <string name="activity_annotation_marker_title">Draw a marker</string>
    <string name="activity_annotation_custom_marker_title">Draw a custom marker icon</string>
    <string name="activity_annotation_geojson_line_title">Draw a GeoJSON line</string>
    <string name="activity_annotation_polygon_title">Draw a polygon</string>
    <string name="activity_annotation_polygon_holes_title">Draw a polygon with holes</string>
    <string name="activity_annotation_marker_view_title">Draw a marker view</string>
    <string name="activity_annotation_custom_info_window_title">Custom info window</string>
    <string name="activity_annotation_animated_marker_title">Animate marker position</string>
    <string name="activity_camera_animate_title">Animate the map camera</string>
    <string name="activity_camera_bounding_box_title">Fit camera in bounding box</string>
    <string name="activity_camera_restrict_title">Restrict map panning</string>
    <string name="activity_offline_simple_title">A simple offline map</string>
    <string name="activity_offline_manager_title">Offline manager</string>
    <string name="activity_query_feature_title">Query a map feature</string>
    <string name="activity_query_select_building_title">Select a building</string>
    <string name="activity_query_feature_count_title">Feature count</string>
    <string name="activity_query_click_on_layer_title">Click on single layer</string>
    <string name="activity_mas_directions_title">Show directions on map</string>
    <string name="activity_mas_optimization_title">Show optimized directions on map</string>
    <string name="activity_mas_geocoding_title">Geocoding autocomplete widget</string>
    <string name="activity_mas_static_image_title">Download a static map</string>
    <string name="activity_mas_maxtrix_api_title">Directions Matrix API</string>
    <string name="activity_plugins_traffic_plugin_title">Display real-time traffic</string>
    <string name="activity_plugins_building_plugin_title">Display buildings in 3D</string>
    <string name="activity_plugins_location_plugin_title">Show a user\'s location</string>
    <string name="activity_mas_simplify_polyline_title">Simplify a polyline</string>
    <string name="activity_mas_map_matching_title">Map Matching</string>
    <string name="activity_lab_location_picker_title">Location picker</string>
    <string name="activity_lab_rv_on_map_title">Recyclerview interaction</string>
    <string name="activity_lab_marker_following_route_title">Marker following route</string>
    <string name="activity_lab_space_station_location_title">Space station current location</string>
    <string name="activity_lab_picture_in_picture_title">Picture in picture</string>
    <string name="activity_lab_off_route_title">Off route detection</string>
    <string name="activity_lab_las_angeles_tourism_title">Los Angeles for tourists</string>
    <string name="activity_lab_indoor_map_title">Indoor Map</string>
    <string name="activity_basic_simple_mapview_description">Show a map in your app using the Mapbox Android SDK.</string>
    <string name="activity_basic_support_map_frag_description">Include a map fragment within your app using Android support library.</string>
    <string name="activity_basic_mapbox_options_description">Add a mapview in a dynamically created layout.</string>
    <string name="activity_style_mapbox_studio_description">Use a custom Mapbox-hosted style.</string>
    <string name="activity_style_raster_description">Use legacy raster tiles in your app.</string>
    <string name="activity_style_default_description">Use a variety of professionally designed styles with the Mapbox Android SDK.</string>
    <string name="activity_styles_show_hide_layer_description">Create a custom layer switcher to display different datasets.</string>
    <string name="activity_styles_langauge_switch_description">Switch the maps language dynamically</string>
    <string name="activity_styles_color_switcher_description">"Using layer set to change a layer's fill color"</string>
    <string name="activity_styles_adjust_layer_opacity_description">Drag the seek bar to adjust the opacity of a raster layer on top of a map.</string>
    <string name="activity_styles_geojson_layer_in_stack_description">Using the second argument of addLayer, you can be more precise</string>
    <string name="activity_styles_vector_source_description">Add a vector source to a map and display it as a layer.</string>
    <string name="activity_style_add_wms_source_description">Adding an external Web Map Service layer to the map</string>
    <string name="activity_style_zoom_dependent_fill_color_description">Make a property depend on the map zoom level, in this case, the water layers fill color.</string>
    <string name="activity_style_create_heatmap_points_description">Use the Mapbox Android SDK to visualize point data as a heatmap.</string>
    <string name="activity_style_create_data_cluster_description">Use GeoJSON to visualize point data in clusters.</string>
    <string name="activity_style_line_layer_description">Create a GeoJSON line source, style it using properties, and add the layer to the map.</string>
    <string name="activity_style_symbol_layer_description">Display markers on the map by adding a symbol layer. Query the map and animate the icon size if clicked on.</string>
    <string name="activity_style_local_style_or_raster_source_description">Load a locally stored map style JSON file or custom raster style via a URL.</string>
    <string name="activity_extrusions_catalina_marathon_extrusions_description">Use data-driven styling and GeoJSON data to set extrusions\' heights</string>
    <string name="activity_extrusions_population_density_extrusions_description">Use extrusions to display 3D building height based on imported vector data</string>
    <string name="menu_map_style_streets">Streets</string>
    <string name="menu_map_style_dark">Dark</string>
    <string name="menu_map_style_light">Light</string>
    <string name="menu_map_style_outdoors">Outdoors</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite streets</string>
    <string name="fab_title_hotels">Hotels</string>
    <string name="fab_title_parks">Parks</string>
    <string name="fab_title_attractions">Attractions</string>
    <string name="san_francisco">San Francisco</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="seattle">Seattle</string>
    <string name="new_orleans">New Orleans</string>
    <string name="chicago">Chicago</string>
    <string name="philadelphia">Philadelphia</string>
    <string name="new_york">New York</string>
    <string name="atlanta">Atlanta</string>
    <string name="portland">Portland</string>
    <string name="denver">Denver</string>
    <string name="minneapolis">Minneapolis</string>
    <string name="miami">Miami</string>
    <string name="tv_create_account_button">Create account</string>
    <string name="tv_sign_in_to_account_button">Sign in</string>
    <string name="skip_for_now_bottom_button">Skip for now</string>
</resources>