<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="34.0444"
        mapbox:mapbox_cameraTargetLng="-118.2536"
        mapbox:mapbox_cameraZoom="15"
        mapbox:mapbox_styleUrl="@string/mapbox_style_light"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions_parent_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        fab:fab_addButtonColorNormal="@color/mapboxRed"
        fab:fab_addButtonColorPressed="@color/mapboxWhite"
        fab:fab_addButtonPlusIconColor="@color/mapboxWhite"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_toggle_hotels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/mapboxBlue"
            fab:fab_colorPressed="@color/mapboxWhite"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_title_hotels"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_toggle_parks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/mapboxGreen"
            fab:fab_colorPressed="@color/mapboxWhite"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_title_parks"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_toggle_attractions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/mapboxRed"
            fab:fab_colorPressed="@color/mapboxWhite"
            fab:fab_size="mini"
            fab:fab_title="@string/fab_title_attractions"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>